Add privacy policy button in the settings view controller.

--- a/WordSearchGenerator/Base.lproj/Main.storyboard
+++ b/WordSearchGenerator/Base.lproj/Main.storyboard
@@ -326,6 +326,34 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection headerTitle="Support" id="e0e-8O-ZXa">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="qSY-HL-5AA">
+                                        <rect key="frame" x="0.0" y="441" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qSY-HL-5AA" id="Ygk-b6-0cM">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sCR-1X-M2Q">
+                                                    <rect key="frame" x="20" y="6" width="106" height="30.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <state key="normal" title="Privacy Policy"/>
+                                                    <connections>
+                                                        <action selector="privacyPolicyButtonTapped:" destination="HsL-sp-J12" eventType="touchUpInside" id="qzs-Ft-uuM"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="sCR-1X-M2Q" secondAttribute="bottom" constant="7.5" id="83l-NY-pk0"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sCR-1X-M2Q" secondAttribute="trailing" constant="8" id="N5f-0k-vNJ"/>
+                                                <constraint firstItem="sCR-1X-M2Q" firstAttribute="leading" secondItem="Ygk-b6-0cM" secondAttribute="leading" constant="20" id="mIg-PQ-o2z"/>
+                                                <constraint firstItem="sCR-1X-M2Q" firstAttribute="top" secondItem="Ygk-b6-0cM" secondAttribute="top" constant="6" id="zpV-f5-mXd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                         </sections>
                         <connections>
                             <outlet property="dataSource" destination="HsL-sp-J12" id="tGU-GC-PWI"/>
@@ -338,6 +366,7 @@
                         <outlet property="gridLinesSwitch" destination="K07-ha-JDb" id="kr4-Q8-b2s"/>
                         <outlet property="gridSizeLabel" destination="pae-jP-Wp1" id="KdH-d6-eZt"/>
                         <outlet property="gridSizeStepper" destination="lFh-xj-ObB" id="U0H-vr-cEn"/>
+                        <outlet property="privacyPolicyButton" destination="sCR-1X-M2Q" id="nxf-ZF-bP9"/>
                         <outlet property="titleSwitch" destination="v29-rg-XfY" id="8nB-JQ-hwM"/>
                         <outlet property="wordsSwitch" destination="l8g-Id-Yga" id="wZ1-Pv-wRD"/>
                     </connections>
